--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download CV</h3>
-	            <p><a href="https://drive.google.com/file/d/19n5mxtac1mKw5g6qIH2FG8MlbvV9pyXH/view?usp=drive_link">resumelink</a></p>
+	            <p><a href="https://drive.google.com/drive/u/1/home">resumelink</a></p>
 	          </div>
           </div>
 
