--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
     					<span class="date">2022-2026</span>
     					<h2>Bachelor of Engineering</h2>
     					<span class="position">ALIGARH MUSLIM UNIVERSITY </span>
-    					<p class="mt-4">Grade: 8.5/10 CGPA.</p>
+    					<p class="mt-4">Grade: 7.4/10 CGPA.</p>
     				</div>
     			</div>
 
@@ -400,7 +400,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/19n5mxtac1mKw5g6qIH2FG8MlbvV9pyXH/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1ncGacxSzC-mLwgZT598TMknuqsY5UESQ/view?usp=drive_link">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -584,7 +584,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download CV</h3>
-	            <p><a href="https://drive.google.com/drive/u/1/home">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1ncGacxSzC-mLwgZT598TMknuqsY5UESQ/view?usp=drive_link">resumelink</a></p>
 	          </div>
           </div>
 
