--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ MS Excel
         </div>
 	<br>
 		<!-- added justify-content-center to center align the last two projects -->
-		/*<div class="row d-flex justify-content-center">  
+		<!--<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
 				<a href="https://drive.google.com/file/d/1nvp_2jzPKcXnviXmRPmPyqA4ONcSM8MP/view?usp=drive_link" class="block-20 zoom-effect"
@@ -473,7 +473,7 @@ MS Excel
 						Developed detailed 3D models and technical drawings for various mechanical tools using SolidWorks.</p>
 				</div>
 			  </div>
-			</div>*/
+			</div>-->
 			<!--<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
 				<a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
