--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Md Shafatullah</span></p>
-										<p><span class="title-s">Job Role: </span> <span>Automobile Engineering Student | Data Analyst & Front-End Developer</span></p>
+										<p><span class="title-s">Job Role: </span> <span>Automobile Engineering Student | Data Analyst & Full Stack Developer</span></p>
 										<!--<p><span class="title-s">Experience: </span> <span> 1 year</span></p>-->
 										<p><span class="title-s">Address: </span> <span>Aligarh Uttarpradesh</span></p>
 									  </div>
