--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 								
 								<p>I’m currently pursuing a Bachelor's in Automobile Engineering at Aligarh Muslim University. Skilled in C++ and JavaScript, I focus on full-stack development and work with technologies like React.js and Next.js to build efficient web applications. I’m passionate about combining my programming skills with automobile engineering and always seek opportunities for innovation. Let’s connect and discuss programming, web development, or engineering!</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Profile:</span> <span>Automobile Engineering Student | Software Developer & Data Analyst  &amp; Front-End Developer </span></li>
+									<li class="d-flex"><span>Profile:</span> <span>Automobile Engineering Student | Software Developer & Data Analyst  &amp; Full Stack Developer </span></li>
 									<!---<li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital Marketing</span></li>--->
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English,Hindi</span></li>
