--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ MS Excel
     					<span class="date">2020-2022</span>
     					<h2>Higher Secondary School</h2>
     					<span class="position">DR ZAMEER AHSAN HIGH SCHOOL</span>
-    					<p class="mt-4">Grade:  8/10 grade</p>
+    					<p class="mt-4">Grade:  7.5/10 grade</p>
     				</div>
 				</div>
     		</div>
@@ -420,7 +420,7 @@ MS Excel
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Below are the sample Data Analytics projects on SQL, Python, Power BI & SolidWorks.</p>
+            <p>Below are the sample Data Analytics projects on SQL, Python, Power BI </p>
           </div>
         </div>
         <div class="row d-flex">
@@ -512,7 +512,7 @@ MS Excel
             <div class="block-18">
               <div class="text">
 								<a href="https://drive.google.com/file/d/19Wa5cRYylXXfx1irp9FU0YARMm7Fs-lK/view?usp=drive_link">
-                <strong class="number" data-number="1">0</strong>
+                <strong class="number" data-number="3">0</strong>
                 <span>Internship/Training</span>
 							</a>
               </div>
@@ -534,7 +534,7 @@ MS Excel
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>More projects on<span> Github  </span> </h2>
-						<div class="heading"> <h4> I love to Code and 3D CAD designing  &amp; uncover structure of model and analysis on them   </h4>
+						<div class="heading"> <h4> I love to Code and Web developing &amp; uncover structure of model and analysis on them   </h4>
 						<br>
 						<p><a href="https://github.com/MRcoder011" class="btn btn-primary py-3 px-5">GitHub</a></p>
 						</div>
@@ -556,14 +556,13 @@ MS Excel
           </div>
         </div>
 
-        <div class="row d-flex contact-info mb-5">
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+       <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-map-signs"></span>
+          			<span class="icon-phone2"></span>
           		</div>
-          		<h3 class="mb-4">Address</h3>
-	            <p>Aligarh ,Uttarpradesh </p>
+          		<h3 class="mb-4">Location</h3>
+	            <p><a >Aligarh , Uttarpradeh </a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
