--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@ MS Excel
           </div>
         </div>
 
-       <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+     <!--  <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-phone2"></span>
@@ -564,7 +564,7 @@ MS Excel
           		<h3 class="mb-4">Location</h3>
 	            <p><a >Aligarh , Uttarpradeh </a></p>
 	          </div>
-          </div>
+          </div>-->
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
