--- a/index.html
+++ b/index.html
@@ -565,33 +565,40 @@ MS Excel
 	            <p><a >Aligarh , Uttarpradeh </a></p>
 	          </div>
           </div>-->
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-          	<div class="align-self-stretch box p-4 text-center">
-          		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-phone2"></span>
-          		</div>
-          		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://0101010101">+91 7488663980</a></p>
-	          </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-          	<div class="align-self-stretch box p-4 text-center">
-          		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-paper-plane"></span>
-          		</div>
-          		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">md0368690@gmail.com</a></p>
-	          </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-          	<div class="align-self-stretch box p-4 text-center">
-          		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-globe"></span>
-          		</div>
-          		<h3 class="mb-4">Download CV</h3>
-	            <p><a href="https://drive.google.com/file/d/1ncGacxSzC-mLwgZT598TMknuqsY5UESQ/view?usp=drive_link">resumelink</a></p>
-	          </div>
-          </div>
+          <div class="d-flex flex-wrap justify-content-center">
+
+  <div class="col-md-6 col-lg-3 d-flex ftco-animate m-2">
+    <div class="align-self-stretch box p-4 text-center w-100">
+      <div class="icon d-flex align-items-center justify-content-center">
+        <span class="icon-phone2"></span>
+      </div>
+      <h3 class="mb-4">Contact Number</h3>
+      <p><a href="tel://7488663980">+91 7488663980</a></p>
+    </div>
+  </div>
+
+  <div class="col-md-6 col-lg-3 d-flex ftco-animate m-2">
+    <div class="align-self-stretch box p-4 text-center w-100">
+      <div class="icon d-flex align-items-center justify-content-center">
+        <span class="icon-paper-plane"></span>
+      </div>
+      <h3 class="mb-4">Email Address</h3>
+      <p><a href="mailto:md0368690@gmail.com">md0368690@gmail.com</a></p>
+    </div>
+  </div>
+
+  <div class="col-md-6 col-lg-3 d-flex ftco-animate m-2">
+    <div class="align-self-stretch box p-4 text-center w-100">
+      <div class="icon d-flex align-items-center justify-content-center">
+        <span class="icon-globe"></span>
+      </div>
+      <h3 class="mb-4">Download CV</h3>
+      <p><a href="https://drive.google.com/file/d/1ncGacxSzC-mLwgZT598TMknuqsY5UESQ/view?usp=drive_link">resumelink</a></p>
+    </div>
+  </div>
+
+</div>
+
 
 		  <div class="container">
 			<br>
